episode cards + loading + error controls

--- a/src/app/pages/intro/intro.page.html
+++ b/src/app/pages/intro/intro.page.html
@@ -2,7 +2,7 @@
 
   <div class="glass-content">
     <div class="d-flex-center">
-      <img class="img" src="assets/images/splash.gif" alt="">
+      <img class="img animate__animated  animate__zoomIn" src="assets/images/splash.gif" alt="">
     </div>
   </div>
 
