--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -18,40 +18,84 @@
 </ion-header>
 <div class="shapedividers_com-3194"></div>
 <ion-content>
+  <ion-grid *ngIf="!limitError" fixed>
+    <ion-row>
+      <ion-col size="12" class="d-flex-center">
 
-<ion-grid fixed>
-  <ion-row>
-    <ion-col size="12" class="d-flex-center">
+        <div class="filters animate__animated animate__fadeInDown">
 
-      <div class="filters animate__animated animate__fadeInDown">
+          <ion-item lines="none" class="custom-input">
+            <ion-icon slot="start" name="search" color="primary"></ion-icon>
+            <ion-input 
+            (ionInput)="getEpisodesByNumber()"
+            [(ngModel)]="episodeNumber"
+            type="number"
+            labelPlacement="floating"
+            [label]="'HOME.search_episode_by_number' | translate"
+            debounce="1000"
+            ></ion-input>
+          </ion-item>
 
-        <ion-item lines="none" class="custom-input">
-          <ion-icon slot="start" name="search" color="primary"></ion-icon>
-          <ion-input 
-          type="number"
-          labelPlacement="floating"
-          [label]="'HOME.search_episode_by_number' | translate"
-          ></ion-input>
-        </ion-item>
+          <ion-item *ngIf="!loading && !episodeNumber">
+            <ion-icon class="select-icon" slot="start" src="assets/images/isotipo.svg"></ion-icon>
+            <ion-select
+            [okText]="'BUTTONS.accept' | translate"
+            [cancelText]="'BUTTONS.cancel' | translate"
+            mode="ios"
+            (ionChange)="getEpisodesBySeason()"
+            labelPlacement="stacked"
+            [label]="'HOME.season' | translate"
+            [(ngModel)]="selectedSeason"
+            >
+              <ion-select-option *ngFor="let s of seasons" [value]="s.id">{{s.title}}</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </div>
+        
+      </ion-col>
+      <ion-col class="animate__animated animate__fadeInUp" *ngFor="let e of episodes" size-lg="4" size-md="6" size-sm="12" size="12">
+        <ion-card class="episode-card" mode="ios">
+          <ion-avatar>
+            <img [src]="e.image" alt="">
+          </ion-avatar>
 
-        <ion-item>
-          <ion-icon class="select-icon" slot="start" src="assets/images/isotipo.svg"></ion-icon>
-          <ion-select
-          [okText]="'BUTTONS.accept' | translate"
-          [cancelText]="'BUTTONS.cancel' | translate"
-          mode="ios"
-          labelPlacement="stacked"
-          [label]="'HOME.season' | translate"
-          [(ngModel)]="selectedSeason"
-          >
-            <ion-select-option *ngFor="let s of seasons" [value]="s.id">{{s.title}}</ion-select-option>
-          </ion-select>
-        </ion-item>
-      </div>
-      
-    </ion-col>
-    <ion-col size="6"></ion-col>
-  </ion-row>
-</ion-grid>
+          <ion-card-content>
+            <p class="space-between">
+              {{'HOME.episode' | translate}}: {{e.episode_number}}
 
+              <a [href]="e.watch_url" target="_blank" rel="nooper noreferrer">
+                <ion-button color="light" mode="md" class="ion-no-padding play-btn" shape="round">
+                  <ion-icon name="play" color="primary"></ion-icon>
+                </ion-button>
+              </a>
+            </p>
+
+            <div class="title">{{e.title}}</div>
+            <p>{{e.synopsis | slice:0:100}}...</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <div *ngIf="loading" class="loading">
+    <ion-spinner color="primary" name="crescent"></ion-spinner>
+  </div>
+
+  <div class="error" *ngIf="episodeNumber && !episodes.length">
+    <ion-icon src="assets/images/isotipo.svg"></ion-icon>
+    <h4>{{'ERRORS.no_results' | translate}}</h4>
+  </div>
+
+  
+  <ng-container *ngIf="limitError && !loading">
+    <div class="error">
+      <ion-icon src="assets/mugiwara.svg"></ion-icon>
+      <h4>{{'ERRORS.limit_exceeded' | translate}}</h4>
+      <p>
+        {{'ERRORS.upgrade_plan_in' | translate}} 
+        <a href="https://rapidapi.com/hub" target="_blank" rel="noopener noreferrer">RapidAPI</a>
+      </p>
+    </div>
+  </ng-container>
 </ion-content>
